--- a/index.html
+++ b/index.html
@@ -7,12 +7,61 @@
         h1{
             text-align: center;
             font-size: 50px;
+			color:white;
         }
+		h2{
+		    text-align: center;
+		    font-size: 20px;
+			color:gray;
+		}
+		.icon_logo{
+			margin-top: 0px;
+			width:300px;
+			height:300px;
+			margin-bottom: 100px;
+		}
+		.hotline24{ 
+			 margin-bottom: 20px;
+			 width:300px;
+			 height:80px;
+			 border-radius:5px;
+			 background:#F8E71C; 
+			 line-height:80px;
+			 text-align:center; 
+			 color:#fff;
+			 font-size:30px;
+			 }
+		.hotline25{ 
+				 margin-bottom: 50px;
+			 	 width:300px;
+			 	 height:80px;
+			 	 border-radius:5px;
+			 	 background:#50E3C2; 
+			 	 line-height:80px;
+			 	 text-align:center; 
+			 	 color:#fff;
+			 	 font-size:30px;
+			 	 }
+		p.bottommargin {
+		margin-bottom: 2cm;
+		bottom:5%}
+		body {background-color:rgb(13,21,57);}
+		h2 {background-color: transparent}
+		p {background-color: rgb(13,21,57)}
+		p.no2 {background-color: gray; padding: 20px;}
     </style>
 </head>
 <body>
     <h1>TikTap</h1>  
-    <h1>Copy Right tiktaps</h1>   
-    <h1>Music Game</h1>   
+	<div align="center">
+		<img class="icon_logo" src="QQ_512.png" />	
+	</div> 
+	<div align="center">
+	    <div class="hotline24"><b>iOS</b></div>
+	</div> 
+		<div align="center">
+	    <div class="hotline25"><b>android</b></div>
+	</div> 
+    <h2 class="bottommargin">Copy Right tiktaps 2019</h2>   
 </body>
 </html>
