--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	    <div class="hotline24" onclick="javascript:location.href='https://itunes.apple.com/cn/app/id1447107910'"><b>iOS</b></div>
 	</div> 
 		<div align="center">
-	    <div class="hotline25" onclick="javascript:location.href='http://www.163.com'"><b>android</b></div>
+	    <div class="hotline25" onclick="javascript:location.href='https://play.google.com/store/apps/details?id=com.tik.tap'"><b>android</b></div>
 	</div> 
 	 <div id="footer">CopyRight@Tiktap2019 </div>
 </body>
