--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 	<div align="center">
 		<img class="icon_logo" src="QQ_512.png" />	
 	</div> 
-	<div align="center">
+	<!-- <div align="center">
 	    <div class="hotline24" onclick="javascript:location.href='https://itunes.apple.com/cn/app/id1447107910'"><b>iOS</b></div>
 	</div> 
 		<div align="center">
 	    <div class="hotline25" onclick="javascript:location.href='https://play.google.com/store/apps/details?id=com.tik.tap'"><b>android</b></div>
-	</div> 
+	</div>  -->
 	 <div id="footer">CopyRight@Tiktap2019 </div>
 </body>
 </html>
